--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -11,6 +11,7 @@ style.scss
 /* Сброс стилей для списков */
 ul, ol {
     list-style: none;
+    padding: 0;
 }
 
 /* Сброс стилей для гиперссылок */
@@ -50,7 +51,9 @@ body {
 
 ._container{
   max-width:1046px;
-  margin: 0px auto
+  margin: 0px auto;
+  padding:0px 15px;
+  box-sizing:content-box;
 }
 
 .header{
@@ -62,14 +65,38 @@ body {
     display:flex;
     min-height:102px;
     align-items:center;
+    
+    }
+    .menu{
+        padding: 5px 0;
     }
     .header_menu{
-        margin: 0px 0px 0px 133px;
+        margin: 0px 0px 0px 335px;
     }
+    @media (max-width: 992px) {
+        .header_menu{
+            margin: 0px 0px 0px 80px;
+        }
+      }
+    
+      @media (max-width: 767px) {
+        .header_menu{
+            margin: 0px 0px 0px 40px;
+        }
+      }
     .menu_list{
-        display:flex;
-        background-color: aquamarine;
-        
+        display: flex;
+        flex-wrap: wrap; 
+        > .menu_item:not(:last-child) {
+          margin: 0px 61px 0px 0px;
+        }
     }
 
 }
+
+
+
+ 
+  
+
+  
