--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,6 @@ body {
   line-height: 1.5;
 }
 
-/* Дополнительные сбросы и стили могут быть добавлены по вашему усмотрению */
 /* Ваши собственные стили могут быть добавлены после этого обнуления */
 @font-face {
   font-family: "Название вашего шрифта";
@@ -38,8 +37,15 @@ body {
 }
 
 .wrapper {
-  min-height: 100%;
+  min-height: 100vh;
   overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 ._container {
@@ -63,6 +69,12 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
+@media (max-width: 479px) {
+  .header .header_container {
+    min-height: 70px;
+    background-color: bisque;
+  }
+}
 .header .menu {
   padding: 5px 0;
 }
@@ -79,13 +91,82 @@ body {
     margin: 0px 0px 0px 40px;
   }
 }
+@media (max-width: 479px) {
+  .header .header_menu {
+    margin: 0px 0px 0px 20px;
+  }
+}
 .header .menu_list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .header .menu_list > .menu_item:not(:last-child) {
-  margin: 0px 61px 0px 0px;
+  margin-right: 61px;
+}
+.header a {
+  font-weight: 600;
+  color: 333333;
+  font-size: 12px;
+  line-height: 171.4285714286%;
+}
+@media (max-width: 479px) {
+  .header a {
+    font-size: 18px;
+  }
+}
+
+.main {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+.main .projectHome {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; /* Встановлюємо відображення flex для горизонтального розташування дочірніх елементів */
+}
+.main .projectHome .main_name {
+  margin: 333px 105px 0px 0px;
+  width: 277.76px;
+  height: 128px;
+}
+.main .projectHome .main_name .main_name_project {
+  color: #BDBDBD;
+  font-size: 64px;
+  font-weight: light;
+}
+.main .projectHome .main_name .main_name_home {
+  color: #333333;
+  font-size: 64px;
+  font-weight: bold;
+}
+.main .projectHome .main_arrows {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 129px;
+  height: 53px;
+  margin: 90px 0px 0px 0px;
+}
+.main .projectHome .main_arrows .main_arrow_right {
+  width: 24px;
+  height: 24px;
+}
+.main .projectHome .main_arrows .main_arrow_left {
+  width: 24px;
+  margin-left: 40px;
+}
+.main .projectHome .main_pic {
+  width: 770px;
+  height: 829px;
+}
+
+.footer {
+  margin-top: auto;
 }
